CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Deepdf)
FILE(GLOB HEAD *.h)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -pthread -lprotobuf ")
LINK_DIRECTORIES(/usr/lib64/mysql)
SET(BIN Deepdf)
AUX_SOURCE_DIRECTORY(. CODE)
ADD_EXECUTABLE(${BIN} ${CODE} ${HEAD})
INCLUDE_DIRECTORIES("/usr/include/mysql/")
TARGET_LINK_LIBRARIES(${BIN} mysqlclient)
LINK_DIRECTORIES("/usr/local/bin/")
LINK_DIRECTORIES(/usr/lib64/mysql)