CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Deepdf)
SET(BIN App)
FILE(GLOB HEAD *.h)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-lprotobuf")
ADD_DEFINITIONS(-ldl)
ADD_DEFINITIONS(-lz)
ADD_DEFINITIONS(-std=c++11)
LINK_DIRECTORIES(/usr/lib64/mysql)
AUX_SOURCE_DIRECTORY(. CODE)
ADD_EXECUTABLE(${BIN} ${CODE} ${HEAD})
INCLUDE_DIRECTORIES(. /usr/include/mysql/ ../Lua)
TARGET_LINK_LIBRARIES(${BIN} mysqlclient)
TARGET_LINK_LIBRARIES(${BIN} Lua)
TARGET_LINK_LIBRARIES(${BIN} pthread)
