CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Deepdf)
SET(BIN dbServer)
FILE(GLOB HEAD *.h ../baseServer/*.h)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -pthread -lprotobuf ")
LINK_DIRECTORIES(/usr/lib64/mysql)
AUX_SOURCE_DIRECTORY(. CODE)
AUX_SOURCE_DIRECTORY(../baseServer BASE)
ADD_EXECUTABLE(${BIN} ${CODE} ${HEAD} ${BASE})
INCLUDE_DIRECTORIES("/usr/include/mysql/")
TARGET_LINK_LIBRARIES(${BIN} mysqlclient)
